extra detailed sources for field declarations