@@ -19,7 +19,6 @@ import org.e2immu.language.cst.api.info.*;
 import org.e2immu.language.cst.api.statement.LocalVariableCreation;
 import org.e2immu.language.cst.api.type.ParameterizedType;
 import org.intellij.lang.annotations.Language;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -37,7 +36,7 @@ public class TestParseDetailedSources extends CommonTestParse {
                 final int len2 = args[0].length();
               }
               private Hashtable<String, Integer> table;
-              Hashtable<String, String> table2;
+              Hashtable<String, String> table2, table3 = null;
             }
             """;
 
@@ -85,16 +84,26 @@ public class TestParseDetailedSources extends CommonTestParse {
         assertEquals("8-21:8-26", dst.detail(table.type().parameters().get(0)).compact2());
         assertEquals("8-29:8-35", dst.detail(table.type().parameters().get(1)).compact2());
         assertEquals("8-38:8-42", dst.detail(table.name()).compact2());
+        assertEquals("8-3:8-43", dst.detail(DetailedSources.ONE_FIELD).compact2()); // whole "line"
+        assertNull(dst.detail(DetailedSources.COMMA_THAT_FOLLOWS));
 
         FieldInfo table2 = typeInfo.getFieldByName("table2", true);
         DetailedSources dst2 = table2.source().detailedSources();
         assertEquals("9-3:9-27", dst2.detail(table2.type()).compact2());
         assertEquals("9-3:9-11", dst2.detail(table2.type().typeInfo()).compact2());
-        ParameterizedType stringPt = table2.type().parameters().get(0);
+        ParameterizedType stringPt = table2.type().parameters().getFirst();
         assertNotSame(runtime.stringParameterizedType(), stringPt);
         assertEquals(runtime.stringParameterizedType(), stringPt);
         assertEquals("9-13:9-18", dst2.detail(stringPt).compact2());
         assertEquals("9-21:9-26", dst2.detail(table2.type().parameters().get(1)).compact2());
         assertEquals("9-29:9-34", dst2.detail(table2.name()).compact2());
+        assertNull(dst2.detail(DetailedSources.ONE_FIELD));
+        assertEquals("9-35:9-35", dst2.detail(DetailedSources.COMMA_THAT_FOLLOWS).compact2());
+
+        FieldInfo table3 = typeInfo.getFieldByName("table3", true);
+        DetailedSources dst3 = table3.source().detailedSources();
+        assertNull(dst3.detail(DetailedSources.ONE_FIELD));
+        assertNull(dst3.detail(DetailedSources.COMMA_THAT_FOLLOWS));
+        assertEquals("9-37:9-42", dst3.detail(table3.name()).compact2());
     }
 }
